Fixed Bug #55372 Incorrect handling of literals led to memory corruption. # Dmitry you might want to review this patch, since I split up zend_add_literal # and added a version for post-pass_two() usage.

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@314933 c90b9560-bf6c-de11-be94-00142212c4b1